--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-date-range": "^2.0.0-alpha.4",
+    "react-datetime": "^3.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.2.1",
     "react-router-dom": "^6.22.3"
@@ -24,6 +30,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-style-import": "^2.0.0"
   }
 }
